# news-graphrag

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile.embed  INTEGRATION.md  Makefile  OPENCLAW_EMBEDDING_INTEGRATION.md  SETUP.md  SIYUAN_INTEGRATION.md  SOURCE_MAP.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
config/: crawl_schedule.yaml  openclaw_memory_configs.jsonc  sources.yaml
dolphinscheduler/: graphrag_pipeline_dag.py
n8n/workflows/: 01_rss_ingestion.json  02_daily_report.json  03_earnings_alert.json  04_siyuan_sync.json
report/templates/: daily_digest.html.j2
scripts/: init_neo4j_schema.cypher  init_postgres.sql  qmd_qdrant.py  test_embedding_integration.py  test_rss_feeds.py
siyuan/: KNOWLEDGE_STRUCTURE.md
src/: models.py
src/api/: knowledge_routes.py  main.py
src/embeddings/: bridge.py
src/knowledge/: siyuan_client.py
src/report/: generator.py
src/retriever/: graph_vector_retriever.py
tests/: conftest.py
tests/unit/: test_embedding_bridge.py  test_qmd_qdrant.py  test_siyuan_client.py
